<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="570dp"
        android:layout_height="280dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardBackgroundColor="@color/darkBlue">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="270dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp"

                    >
                    <TextView
                        android:id="@+id/day"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15pt"
                        android:layout_gravity="center"
                        android:text="@string/day" />
                    <TextView
                        android:id="@+id/month"
                        android:textSize="10pt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5pt"
                    android:layout_marginLeft="15pt"

                    >
                    <TextView
                        android:id="@+id/time"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"/>

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        map:liteMode="true"
                        map:mapType="normal"
                        map:cameraZoom="15"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/report"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:layout_gravity="center"
        android:textSize="10pt"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        />


</LinearLayout>