<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:layout_margin="10dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/txtusername"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4">
    <TextView
        android:textSize="20dip"
        android:id="@+id/login_help_instructions"
        android:textColor="@color/text_grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_help_instructions" />

    <EditText
        android:id="@+id/login_help_email_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_help_email_input_hint"
        android:inputType="textEmailAddress"></EditText>

    <Button
        android:id="@+id/login_help_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_submit_button_label"
        android:textColor="@color/lightBlue"
        android:background="#FFFFFF" />

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/button"
        android:textColor="@color/lightBlue"
        android:background="#FFFFFF"/>

        </LinearLayout>
</LinearLayout>
